--- a/index.html
+++ b/index.html
@@ -4,13 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/main.scss">
+    <link rel="stylesheet" href="styles/css/main.css">
 
     <title>Portfolio Jeanne BOUCHEND'HOMME</title>
 </head>
 
 <body>
-    <h1>Jeanne BOUCHEND'HOMME</h1>
+
+    <header class="header-website">
+        HEADER
+    </header>
+
+    <main>
+        <section class="section-display left-content">
+            <article class="text-content">
+                <h1 class="title">Jeanne BDH</h1>
+                <p class="paragraph">A passionate Full Stack Software Developer 🚀 having an experience of building Web
+                    and Mobile
+                    applications with JavaScript / Reactjs / Nodejs / React Native and some other cool libraries and
+                    frameworks.</p>
+                <div class="socials">
+                    socials icons
+                </div>
+                <div class="action-div">
+                    <button class="btn btn-primary">Contact</button>
+                    <button class="btn btn-secondary">CV</button>
+                    <button class="btn btn-grey">CV</button>
+                    <button class="btn btn-lightgrey">CV</button>
+                    <button class="btn btn-dark">CV</button>
+                    <button class="btn btn-accent">CV</button>
+                </div>
+            </article>
+            <div class="illustration">
+                <img src="img/presentation.png" alt="illustration bureau">
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        FOOTER
+    </footer>
+
 </body>
 
 </html>
