update fin live 2

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <main>
-        <section class="section-display left-content">
+        <section class="section-display left-text-content">
             <article class="text-content">
                 <h1 class="title">Jeanne BDH</h1>
                 <p class="paragraph">A passionate Full Stack Software Developer 🚀 having an experience of building Web
@@ -24,19 +24,27 @@
                     applications with JavaScript / Reactjs / Nodejs / React Native and some other cool libraries and
                     frameworks.</p>
                 <div class="socials">
-                    socials icons
+                    <!-- socials icons -->
                 </div>
                 <div class="action-div">
                     <button class="btn btn-primary">Contact</button>
-                    <button class="btn btn-secondary">CV</button>
-                    <button class="btn btn-grey">CV</button>
-                    <button class="btn btn-lightgrey">CV</button>
-                    <button class="btn btn-dark">CV</button>
-                    <button class="btn btn-accent">CV</button>
+                    <button class="btn btn-primary">CV</button>
                 </div>
             </article>
             <div class="illustration">
                 <img src="img/presentation.png" alt="illustration bureau">
+            </div>
+        </section>
+        <section class="section-display right-text-content">
+            <article class="text-content">
+                <h1 class="title">Mes compétences</h1>
+                <p class="paragraph">A passionate Full Stack Software Developer 🚀</p>
+                <div class="competences-icons">
+                    <!-- competences icons -->
+                </div>
+            </article>
+            <div class="illustration">
+                <img src="img/competences.png" alt="illustration compétences">
             </div>
         </section>
     </main>
