ajout bloc competences

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/css/main.css">
 
     <title>Portfolio Jeanne BOUCHEND'HOMME</title>
@@ -37,10 +38,14 @@
         </section>
         <section class="section-display right-text-content">
             <article class="text-content">
-                <h1 class="title">Mes compétences</h1>
-                <p class="paragraph">A passionate Full Stack Software Developer 🚀</p>
+                <h2 class="title">Mes compétences</h2>
+                <p class="paragraph">Voici les compétences que je maîtrise :</p>
                 <div class="competences-icons">
-                    <!-- competences icons -->
+                    <i class="fa-brands fa-html5"></i>
+                    <i class="fa-brands fa-css3-alt"></i>
+                    <i class="fa-brands fa-square-js"></i>
+                    <i class="fa-brands fa-node-js"></i>
+                    <i class="fa-brands fa-vuejs"></i>
                 </div>
             </article>
             <div class="illustration">
