--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="section-display left-text-content">
             <article class="text-content">
                 <h1 class="title">Jeanne BDH</h1>
-                <p class="paragraph">A passionate Full Stack Software Developer 🚀 having an experience of building Web
+                <p class="paragraph">A passionate Full Stack Software Developer <span class="animate-fusee">🚀</span> having an experience of building Web
                     and Mobile
                     applications with JavaScript / Reactjs / Nodejs / React Native and some other cool libraries and
                     frameworks.</p>
