--- a/index.html
+++ b/index.html
@@ -19,8 +19,19 @@
     <main>
         <section class="section-display left-text-content">
             <article class="text-content">
-                <h1 class="title">Jeanne BDH</h1>
-                <p class="paragraph">A passionate Full Stack Software Developer <span class="animate-fusee">🚀</span> having an experience of building Web
+                <h1 class="title">Jeanne BDH
+                    <picture class="emoji-gif">
+                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/26a1/512.webp" type="image/webp">
+                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/26a1/512.gif" alt="⚡">
+                    </picture>
+                </h1>
+                <p class="paragraph">A passionate Full Stack Software Developer
+                    <span class="animate-fusee">
+                        <picture class="emoji-gif">
+                            <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f680/512.webp" type="image/webp">
+                            <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f680/512.gif" alt="🚀">
+                        </picture>
+                    </span> having an experience of building Web
                     and Mobile
                     applications with JavaScript / Reactjs / Nodejs / React Native and some other cool libraries and
                     frameworks.</p>
